# local_shock_tracking

./: .gitignore  CLAUDE.md  Cargo.toml  rustc-ice-2025-06-13T18_27_33-6608.txt  rustc-ice-2025-06-15T15_19_46-114295.txt  rustc-ice-2025-07-02T14_43_23-70927.txt
examples/: cg_triangle_example.rs
inputs/: solverparam.json
outputs/: solutions_0.csv  solutions_100.csv  solutions_120.csv  solutions_140.csv  solutions_160.csv  solutions_180.csv  solutions_20.csv  solutions_200.csv  solutions_40.csv  solutions_60.csv  solutions_80.csv
src/: disc.rs  initialization.rs  io.rs  lib.rs  main.rs  solver.rs  spatial_disc.rs  temporal_disc.rs
src/disc/: ader.rs  advection1d_space_time.rs  advection1d_space_time_quad.rs  advection1d_space_time_tri.rs  basis.rs  boundary.rs  boundary_conditions.rs  burgers1d.rs  burgers1d_space_time.rs  cg_basis.rs  euler1d.rs  finite_difference.rs  gauss_points.rs  geometric.rs  hoist.rs  linear_elliptic.rs  mesh.rs  riemann_solver.rs  space_time_1d_scalar.rs  space_time_1d_system.rs
src/disc/advection1d_space_time/: flux.rs  riemann_solver.rs
src/disc/advection1d_space_time_quad/: boundary_condition.rs  riemann_solver.rs
src/disc/advection1d_space_time_tri/: flux.rs  p0solver.rs
src/disc/basis/: lagrange1d.rs  quadrilateral.rs  (+2 more)
src/io/: param_parser.rs  params_parser.rs  write_to_csv.rs  write_to_vtu.rs
src/python/: differentiation.py  surface_differentiation.py  volume_differentiation.py
src/spatial_disc/: basis.rs  boundary_conditions.rs  flux.rs  gauss_points.rs  mesh.rs  riemann_solver.rs
tests/: integration_test.rs
(+27 files in other folders)
