[package]
name = "local-shock-tracking"
version = "0.1.0"
edition = "2024"
[profile.dev]
lto = "fat"
opt-level = 2
[profile.release]
lto = "fat"
[dependencies]
csv = "1.3.1"
faer = "0.21.9"
faer-ext = "0.6.0"
ndarray = "0.16.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
