[package]
name = "local-shock-tracking"
version = "0.1.0"
edition = "2024"
[profile.dev]
lto = "fat"
opt-level = 2
[profile.release]
lto = "fat"
[dependencies]
faer-ext = { version = "0.6.0", features = ["ndarray"] }
csv = "1.3.1"
faer = "0.22.6"
ndarray = "0.16.1"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
ndarray-stats = "0.6.0"
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
statrs = "0.18.0"
num-dual = "0.11.2"
nalgebra = "0.33.2"
nshare = "0.10.0"
hashbrown = "0.15.4"
vtkio = "0.7.0-rc1"
once_cell = "1.21.3"
